--- a/Assignment_30/Assembly-CSharp.csproj
+++ b/Assignment_30/Assembly-CSharp.csproj
@@ -63,7 +63,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\MovePositiveZ.cs" />
     <Compile Include="Assets\Scripts\PlayerController.cs" />
+    <Compile Include="Assets\Scripts\boundary.cs" />
     <Reference Include="UnityEngine">
       <HintPath>C:/Users/kaiph/Desktop/Unity Stuff/2019.4.12f1/Editor/Data/Managed/UnityEngine/UnityEngine.dll</HintPath>
     </Reference>
